# iridium

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  make.py  todo.md
benches/: benchmark.rs
src/: app.rs  areas.rs  camera.rs  collections.rs  coordinates.rs  events.rs  examples.rs  forces.rs  generators.rs  input.rs  integrator.rs  iridium.rs  lib.rs  main.rs  particle.rs  particles.rs  perf_logger.rs  quadtree.rs  random.rs  render_thread.rs  renderer.rs  sim_events.rs  simulation.rs  systems.rs  timer.rs  types.rs  ui.rs  updatables.rs  user_events.rs  window.rs
src/Particle/: Drain.rs  Particle.rs  ParticleCollection.rs  Tap.rs
src/Simulation/: Quadtree.rs
src/rendering/: input.rs  mod.rs  render_thread.rs  renderer.rs  safe_sfml.rs
src/simulation/: areas.rs  color.rs  forces.rs  generators.rs  mod.rs  particles.rs  quadtree.rs  random.rs  sim_events.rs  simulation.rs  systems.rs  types.rs
src/utils/: mod.rs  perf_logger.rs  smooth_rate.rs  sorted_vec.rs  timer.rs  worker_thread.rs
