# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "*"
log = "*"
nalgebra = "*"
rand = "*"
sfml = "*"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 0
debug = true
