# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "*"
log = "*"
nalgebra = "*"
psutil = "3.2.2"
rand = "*"
rand_xorshift = "0.3.0"
rayon = "1.7.0"
sfml = "*"

[profile.dev]
opt-level = 1

# Profile for profiling (max optimization, all debug symbols)
[profile.release]
opt-level = 3
debug = true
