# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "iridium"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "*"
log = "*"
nalgebra = "*"
psutil = "*"
rand = "*"
rand_pcg = "*"
rayon = "*"
sfml = "0.20.0"

[profile.dev]
opt-level = 1

# Profile for profiling (max optimization, all debug symbols)
[profile.release]
opt-level = 3
debug = true
